--- a/HW2 SDS315.Rmd
+++ b/HW2 SDS315.Rmd
@@ -5,6 +5,8 @@ date: "2025-01-28"
 output: pdf_document
 ---
 
+UT Eid: rc53567
+
 GitHub Link : https://github.com/RPC777/Homework-2
 
 ```{r setup, include=FALSE}
